# slope-finder-be

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/src/slope_finder_be/: constants.py
backend/src/slope_finder_be/api/: main.py
backend/src/slope_finder_be/pipelines/: get_resort_info.py
frontend/: Dockerfile  README.md
src/slope_check_backend/: __init__.py  constants.py  main.py  models.py  utils.py
src/slope_check_backend/api/: main.py  models.py  routing.py  utils.py
src/slope_check_backend/scraper/: scraper.py
src/slope_check_backend/services/: routing.py  snow_report.py
src/slope_finder_backend/: constants.py  models.py
src/slope_finder_backend/api/: main.py
src/slope_finder_backend/pipelines/: get_resort_info.py
src/slope_finder_backend/services/: routing.py  snow_report.py  weather.py
src/slope_finder_be/: constants.py  models.py
src/slope_finder_be/api/: main.py
src/slope_finder_be/services/: routing.py  weather.py
