[project]
name = "slope-finder-backend"
version = "0.1.0"
description = "A Python package for finding ski slopes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.126.0",
    "pydantic==2.12.5",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
    "beautifulsoup4>=4.12.0",
    "ruff>=0.14.10",
    "pytest>=8.0.0",
]
authors = [
    { name = "Felix Jost", email = "fel.jost@gmail.com" }
]


[project.urls]
Homepage = "https://github.com/feljost/slope-finder-backend"
Repository = "https://github.com/feljost/slope-finder-backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slope_finder_backend"]
